--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-flask
-flask-cors
-beautifulsoup4
-requests
-gunicorn
+Flask==3.0.3
+flask-cors==4.0.0
+requests==2.32.3
+beautifulsoup4==4.12.3
+lxml==5.2.2
+gunicorn==22.0.0
